test/tests/stages/8_loops/invalid_parse/extra_credit/label_in_loop_header.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(label)
  :
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  ;
  }
  return
  const int(0)
  ;
  }
